yet another version

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
       <p><a href="https://en.wikipedia.org/wiki/Swords_to_ploughshares">Swords to ploughshares</a>/ We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade sovereign nations like Syria, Iraq or Afghanistan - people get angry when you drop bombs at them.</p>
 
 
-      <h3>Plan B</h3>
-      <p>After attending <a href="https://www.instagram.com/p/Brc1lwTBfkl/">COP24 in Poland</a> realised it might be too late to fix climate change, it's a human problem not technology problem. Designing a self-sustaining capsule that produces energy, food, water and oxygen. Learn a lot of useful skills on the way to populate other planets...</p>
+      <h3><a href="https://genesis.re/wiki#Plan_B">Plan B</a></h3>
+      <p>After attending <a href="https://www.instagram.com/p/Brc1lwTBfkl/">Hack4Climate and COP24</a> we realised it might be too late to fix climate change, it's a human problem not technology problem. Designing a self-sustaining capsule that produces energy, food, water and oxygen. Learning a lot of useful skills on the way to populate other planets. Check <a href="https://genesis.re/wiki#Plan_B">Plan B</a> on the wiki.</p>
 
 
 <!--       <h3>BTC address:</h3>
@@ -172,29 +172,38 @@
 
       <!-- ZCASH: t1TxkhAy5ofChY4zaCJsb9Dt9RTTCvmMURc -->
 
-      <h3>Operaring principles<br>
-      <a href="https://genesis.re/wiki">genesis.re/wiki#Core_Values</a></h3>
-      <p>love<br>peace<br>respect<br>trust<br>honesty<br>integrity</p>
+<!--       <h3>Operaring principles: <a href="https://genesis.re/wiki">genesis.re/wiki</a></h3>
+      <p>love<br>peace<br>respect<br>trust<br>honesty<br>integrity</p> -->
 
       <!-- <p style="font-size: 1.4em; font-weight: bold">Co-creating astral vortex: <a href="https://astralship.org">astralship.org</a></p> -->
 
       <div>
+        <img src="www/images/freeman.jpg" height="90" style="float:left; margin-right: 15px">
+
+        Michael Freeman<br>
+        <a href="https://twitter.com/genesisdotre">@genesisdotre</a><br>
+        <a href="mailto:email@genesis.re">email@genesis.re</a><br>
+        <a href="tel:+447586294279">+44 758 629 4279</a><br>
+        <div class="clearfix"></div>  
+
+        <br>
+
         <img src="www/images/blueface.jpg" height="90" style="float:left; margin-right: 15px">
 
-        <a href="mailto:email@genesis.re">email@genesis.re</a><br><br>
-
+        Michal Stefanow<br>
+        <a href="https://twitter.com/michalstefanow">@michalstefanow</a><br>
+        <a href="mailto:michalstefanow@gmail.com">michalstefanow@gmail.com</a><br>
         <a href="https://michalstefanow.com">michalstefanow.com</a><br>
-
-        <div class="clearfix"></div>  
+        <div class="clearfix"></div>        
 
         <br>
 
         <img src="www/images/marsrobertson.jpg" height="90" style="float:left; margin-right: 15px">
 
-        <a href="mailto:marsXrobertson@gmail.com">marsXrobertson@gmail.com</a><br><br>
-
+        Mars Robertson<br>
+        <a href="https://twitter.com/marsXrobertson">@marsXrobertson</a><br>
+        <a href="mailto:marsXrobertson@gmail.com">marsXrobertson@gmail.com</a><br>
         <a href="https://marsrobertson.com">marsrobertson.com</a><br>
-
         <div class="clearfix"></div>
 
       </div>
