--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
       .wrapper {
         max-width: 600px;
-        margin: 20px auto; /* TODO: align middle */
+        margin: 80px auto; /* TODO: align middle */
         padding: 20px;
-        background: rgba(0,0,0,0.8);
+        background: rgba(0,0,0,0.85);
         box-shadow: 0px 0px 30px 10px #ffffff;
       }
 
@@ -73,17 +73,29 @@
 
     </style>
 
-    <meta property="og:title" content="genesis.re • long-lasting, meaningful, positive impact"/>
+    <meta property="og:title" content="genesis.re • operating system for the planets"/>
     <meta property="og:image" content="https://genesis.re/flower.jpg""/>
-    <meta property="og:site_name" content="Architecting the new world"/>
-    <meta property="og:description" content="Using mailhustle.com to benefit from your own data."/>
+    <meta property="og:site_name" content="architecting the new world"/>
+    <meta property="og:description" content="working towards 'Plan B' as paradigm shift is required"/>
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@genesisdotre">
-    <meta name="twitter:creator" content="@stefek99">
-    <meta name="twitter:title" content="genesis.re • long-lasting, meaningful, positive impact">
-    <meta name="twitter:description" content="Architecting the new world. Using mailhustle.com to benefit from your own data.">
+    <meta name="twitter:creator" content="@marsXrobertson">
+    <meta name="twitter:title" content="genesis.re • operating system for the planets">
+    <meta name="twitter:description" content="architecting the new world • working towards 'Plan B' as paradigm shift is required">
     <meta name="twitter:image" content="https://genesis.re/flower.jpg">
+
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-103804182-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-103804182-1');
+    </script>
+
 
   </head>
   <body>
@@ -111,50 +123,41 @@
       ship sailing US to UK in 20+ days.</p> -->
 
 
-      <h3>architecting the new world<br>
-          operating system for the planets</h3>
-      <br style="height: 3px">
+      <h3>architecting the new world</h3>
+      <h3>operating system for the planets</h3>
+      <h3>read more on the <a href="https://genesis.re/wiki">wiki</a>, specifically <a href="https://genesis.re/wiki#Plan_B">Plan B</a></h3>
+
+
+<!--       <br style="height: 3px">
       <p style="margin-top: 0px"><strong style="border: 1px solid white; padding: 2px;">genesis</strong> as in source, beginning, origin<br>
         <br style="height: 3px">
-         <strong style="border: 1px solid white; padding: 2px;">re</strong> as in renew, reset, restart, reboot, rejuvenate</p>
+         <strong style="border: 1px solid white; padding: 2px;">re</strong> as in renew, reset, restart, reboot, rejuvenate</p> -->
 
-      <h3>Paradigm shift</h3>
-      <p style="margin-bottom: 0">We have internet, Facebook, iPhone, blockchain, Elon Musk flying to Mars but current models of governance are stuck in 1800... We can do better, technology is ready, it is upon us to embody paradigm shift:</p>
-      • Regenerative culture, systematic change<br>
-      • Liquid democracy, democracy.earth<br>
-      • Liberland, Blue Frontiers, Kleros, Aragon, Bitnation<br>
-      • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective altruism</a>, <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple bottom line</a><br>
-    
-      Long-lasting, meaningful, positive impact.<br>
-      Every being on this planet and beyond.</p>        
+<!--       <h3>effective altruism all the way</h3>
+      <h3>check more on the <a hreh="https://genesis.re/wiki">genesis.re/wiki</h3> -->
 
 
-      <h3>Rainforest restoration</h3>
-      <p>In many places jungle was cut down. Planting bamboo that enriches the soil, captures CO<sub>2</sub> and is used to create construction material plus generates clean, renewable energy from biomass.</p>
 
-      <div style="margin-left: 20px">
-        <h3 style="font-size:1.2em">Follow up</h3>
-        <p>Network of resilient communities focused on education:<br>
-         • nature, food, health, nutrition<br>
-         • technology, engineering, construction<br>
-         • human communication protocols <i>(communication, relationships)</i>
-       </p>
-      </div>
+<!--       <h3><a href="https://genesis.re/wiki#Plan_B">Plan B</a></h3>
+      <p>After attending COP24 United Nations Climate Change Conference we realised it might be too late to fix the global warming.<br><br>
 
-      <h3>Repurposing military production</h3>
-      <p><a href="https://en.wikipedia.org/wiki/Swords_to_ploughshares">Swords to ploughshares</a>/ We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade sovereign nations like Syria, Iraq or Afghanistan - people get angry when you drop bombs at them.</p>
+        Self-sustaining capsule that produces energy, food, water and oxygen.<br><br>
+        
+        Radical self-reliance, decentralization, minimal viable civilisation.<br><br>
 
-
-      <h3><a href="https://genesis.re/wiki#Plan_B">Plan B</a></h3>
-      <p>After attending <a href="https://www.instagram.com/p/Brc1lwTBfkl/">Hack4Climate and COP24</a> we realised it might be too late to fix climate change, it's a human problem not technology problem. Designing a self-sustaining capsule that produces energy, food, water and oxygen. Learning a lot of useful skills on the way to populate other planets. Check <a href="https://genesis.re/wiki#Plan_B">Plan B</a> on the wiki.</p>
+        Collaborationg and competition, changing game theory incentives.<br><br></p> -->
 
 
 <!--       <h3>BTC address:</h3>
 
       <input class="btc" readonly value="1GEnesisReVCQG641yERVQgStUvqH6S9U2">
 
-      <a href="www/images/qrcode.png" style="border-bottom: 0; position: absolute; margin-left: 10px; margin-top: -40px;"><img src="www/images/qrcode.png" height="130"></a> -->
 
+
+      <a href="www/images/qrcode.png" style="border-bottom: 0; position: absolute; margin-left: 10px; margin-top: -40px;"><img src="www/images/qrcode.png" height="130"></a>
+ -->
+      <br>
+      <br>
 
       <!--
       <h3>Project 3: life insurance policy</h3>
@@ -178,7 +181,7 @@
       <!-- <p style="font-size: 1.4em; font-weight: bold">Co-creating astral vortex: <a href="https://astralship.org">astralship.org</a></p> -->
 
       <div>
-        <img src="www/images/freeman.jpg" height="90" style="float:left; margin-right: 15px">
+<!--         <img src="www/images/freeman.jpg" height="90" style="float:left; margin-right: 15px">
 
         Michael Freeman<br>
         <a href="https://twitter.com/genesisdotre">@genesisdotre</a><br>
@@ -186,13 +189,13 @@
         <a href="tel:+447586294279">+44 758 629 4279</a><br>
         <div class="clearfix"></div>  
 
-        <br>
+        <br> -->
 
         <img src="www/images/blueface.jpg" height="90" style="float:left; margin-right: 15px">
 
         Michal Stefanow<br>
         <a href="https://twitter.com/michalstefanow">@michalstefanow</a><br>
-        <a href="mailto:michalstefanow@gmail.com">michalstefanow@gmail.com</a><br>
+        <!-- <a href="mailto:michalstefanow@gmail.com">michalstefanow@gmail.com</a><br> -->
         <a href="https://michalstefanow.com">michalstefanow.com</a><br>
         <div class="clearfix"></div>        
 
@@ -202,7 +205,7 @@
 
         Mars Robertson<br>
         <a href="https://twitter.com/marsXrobertson">@marsXrobertson</a><br>
-        <a href="mailto:marsXrobertson@gmail.com">marsXrobertson@gmail.com</a><br>
+        <!-- <a href="mailto:marsXrobertson@gmail.com">marsXrobertson@gmail.com</a><br> -->
         <a href="https://marsrobertson.com">marsrobertson.com</a><br>
         <div class="clearfix"></div>
 
