--- a/wiki/index.html
+++ b/wiki/index.html
@@ -5,7 +5,7 @@
   <title>genesis.re</title>
 
   <meta property="og:title" content="genesis.re"/>
-  <meta property="og:image" content="http://tatefuture.com/images/manifesting-meg-benedicte.jpg"/>
+  <meta property="og:image" content="https://genesis.re/images/manifesting.jpg"/>
   <meta property="og:site_name" content="genesis.re - wiki page"/>
   <meta property="og:description" content="Manifesting Infinite Abundance & Prosperity"/>
 
