--- a/index.html
+++ b/index.html
@@ -1,221 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>genesis.re • operating system for the planets</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8" />
-    <style>
+ <head>
+  <meta charset="UTF-8">
+  <title>genesis.re - redirect to MichalStefanow.com</title>
 
-      html { 
-        background: url(www/images/earth-background-resized.jpg) no-repeat center center fixed; 
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-      }
+  <meta property="og:title" content="genesis.re"/>
+  <meta property="og:image" content="https://genesis.re/images/manifesting.jpg"/>
+  <meta property="og:site_name" content="genesis.re - redirect to MichalStefanow.com"/>
+  <meta property="og:description" content="Manifesting Infinite Abundance & Prosperity"/>
 
-      body {
-        margin: 0;
-        color: white;
-        font-family: monospace;
-        font-size: 1.1em;
-      }
+ </head>
+ <body>
+  <noscript>
+    Please enable JavaScript for a proper redirect. 
+    For now please navigate manually <a href="https://MichalStefanow.com">MichalStefanow.com</a>
 
-      .wrapper {
-        max-width: 600px;
-        margin: 80px auto; /* TODO: align middle */
-        padding: 20px;
-        background: rgba(0,0,0,0.85);
-        box-shadow: 0px 0px 30px 10px #ffffff;
-      }
+    <h3>JavaScript code on this website is relatively harmless</h3>
+    <p>Using redirects untill I properly setup https:// on the subdomain, waiting for certificate at the moment</p>
+    <pre>location = "https://MichalStefanow.com";</pre>
 
-      .space {
-        display: inline-block;
-        width: 5px;
-      }
-
-      a {
-        color: white;
-        text-decoration: none;
-        transition: all 1000ms ease-out;
-        border-bottom: 2px solid white;
-      }
-
-      header a:hover {
-        color: yellow;
-        border-bottom: 2px solid yellow;
-      }
-
-      .clearfix:after {
-         content: " ";
-         visibility: hidden;
-         display: block;
-         height: 0;
-         clear: both;
-      }
-
-      h3 {
-        margin-bottom: 0;
-        font-weight: bold;
-        font-size: 1.4em;
-      }
-      h3 + p {
-        margin-top: 0;
-      }
-
-      .btc {
-        font-family: monospace;
-        font-size: 1.4em;
-        width: 410px;
-        padding: 8px;      
-        max-width: calc(100vw - 128px); 
-      }
-
-    </style>
-
-    <meta property="og:title" content="genesis.re • operating system for the planets"/>
-    <meta property="og:image" content="https://genesis.re/flower.jpg""/>
-    <meta property="og:site_name" content="architecting the new world"/>
-    <meta property="og:description" content="working towards 'Plan B' as paradigm shift is required"/>
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@genesisdotre">
-    <meta name="twitter:creator" content="@marsXrobertson">
-    <meta name="twitter:title" content="genesis.re • operating system for the planets">
-    <meta name="twitter:description" content="architecting the new world • working towards 'Plan B' as paradigm shift is required">
-    <meta name="twitter:image" content="https://genesis.re/flower.jpg">
-
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-103804182-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-103804182-1');
-    </script>
-
-
-  </head>
-  <body>
-
-    <!-- TODO: on mobile resize gently the font size so it fits into a single line -->
-    <div class="wrapper">
-
-<!--       <div style="border: 2px solid white; padding: 14px;">
-        <h1 style="margin-top:0px">Current focus: <a href="https://mailhustle.com">mailhustle.com</a></h1>
-        <p style="margin-bottom:0px">Personal data analytics tool, extracting wealth of knowledge from existing Gmail inbox and Facebook data dump.
-        <br>
-        <br>
-        It is your data, change the game, be in control.</p>
-        <p style="margin-bottom:0px">At all times I remember why I do it - to empower people and to have more time IRL (in real life) rather than doing all the admin.</p>
-      </div> -->
-
-
-<!--       <h1>architecting the new world<br>
-          operating system for the planets</h1> -->
-
-
-<!--       <p>Democracy originated in ancient Greece.
-      Current model of voting is so 1800.
-      Technology of horse and cart, mail pigeon,
-      ship sailing US to UK in 20+ days.</p> -->
-
-
-      <h3>architecting the new world</h3>
-      <h3>operating system for the planets</h3>
-      <h3>read more on the <a href="https://genesis.re/wiki">wiki</a>, specifically <a href="https://genesis.re/wiki#Plan_B">Plan B</a></h3>
-
-
-<!--       <br style="height: 3px">
-      <p style="margin-top: 0px"><strong style="border: 1px solid white; padding: 2px;">genesis</strong> as in source, beginning, origin<br>
-        <br style="height: 3px">
-         <strong style="border: 1px solid white; padding: 2px;">re</strong> as in renew, reset, restart, reboot, rejuvenate</p> -->
-
-<!--       <h3>effective altruism all the way</h3>
-      <h3>check more on the <a hreh="https://genesis.re/wiki">genesis.re/wiki</h3> -->
-
-
-
-<!--       <h3><a href="https://genesis.re/wiki#Plan_B">Plan B</a></h3>
-      <p>After attending COP24 United Nations Climate Change Conference we realised it might be too late to fix the global warming.<br><br>
-
-        Self-sustaining capsule that produces energy, food, water and oxygen.<br><br>
-        
-        Radical self-reliance, decentralization, minimal viable civilisation.<br><br>
-
-        Collaborationg and competition, changing game theory incentives.<br><br></p> -->
-
-
-<!--       <h3>BTC address:</h3>
-
-      <input class="btc" readonly value="1GEnesisReVCQG641yERVQgStUvqH6S9U2">
-
-
-
-      <a href="www/images/qrcode.png" style="border-bottom: 0; position: absolute; margin-left: 10px; margin-top: -40px;"><img src="www/images/qrcode.png" height="130"></a>
- -->
-      <br>
-      <br>
-
-      <!--
-      <h3>Project 3: life insurance policy</h3>
-      <p>$1m+ insurance fund to either pay the ransom or hire ex-military ex-Navy SEALs contractors for a rescue operation. Note: these guys have fancy toys and are working like machines. If you still believe you have game theory incentives - do not mess with us - let's work together towards advancement of humanity.</p>
-
-      <p><i>(we still believe discretion is the best way to stay safe, once you start appearing at conferences is not that easy to fork reality)</i></p>
-
-      <h3>Project 4: Bitcoin mining in the space</h3>
-      <p>Blockstream offers satellites broadcasting blockchain... Solar power in the space works 24/7/365, no such thing as day and night. Shut down the naysayers complaining about environmental costs.</p>
-
-      -->
-
-
-      <!-- DOGE: DUNRYwRyyiqjW6mNVwZCd3bDTT88k4S1Jw -->
-
-      <!-- ZCASH: t1TxkhAy5ofChY4zaCJsb9Dt9RTTCvmMURc -->
-
-<!--       <h3>Operaring principles: <a href="https://genesis.re/wiki">genesis.re/wiki</a></h3>
-      <p>love<br>peace<br>respect<br>trust<br>honesty<br>integrity</p> -->
-
-      <!-- <p style="font-size: 1.4em; font-weight: bold">Co-creating astral vortex: <a href="https://astralship.org">astralship.org</a></p> -->
-
-      <div>
-<!--         <img src="www/images/freeman.jpg" height="90" style="float:left; margin-right: 15px">
-
-        Michael Freeman<br>
-        <a href="https://twitter.com/genesisdotre">@genesisdotre</a><br>
-        <a href="mailto:email@genesis.re">email@genesis.re</a><br>
-        <a href="tel:+447586294279">+44 758 629 4279</a><br>
-        <div class="clearfix"></div>  
-
-        <br> -->
-
-        <img src="www/images/blueface.jpg" height="90" style="float:left; margin-right: 15px">
-
-        Michal Stefanow<br>
-        <a href="https://twitter.com/michalstefanow">@michalstefanow</a><br>
-        <!-- <a href="mailto:michalstefanow@gmail.com">michalstefanow@gmail.com</a><br> -->
-        <a href="https://michalstefanow.com">michalstefanow.com</a><br>
-        <div class="clearfix"></div>        
-
-        <br>
-
-        <img src="www/images/marsrobertson.jpg" height="90" style="float:left; margin-right: 15px">
-
-        Mars Robertson<br>
-        <a href="https://twitter.com/marsXrobertson">@marsXrobertson</a><br>
-        <!-- <a href="mailto:marsXrobertson@gmail.com">marsXrobertson@gmail.com</a><br> -->
-        <a href="https://marsrobertson.com">marsrobertson.com</a><br>
-        <div class="clearfix"></div>
-
-      </div>
-
-    </div>
-
-    <script src="https://genesis.re/cmdctrl/cmdctrl.js"></script>
-
-    <!-- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
-
-  </body>
+  </noscript>
+  <script>
+    location = "https://MichalStefanow.com";
+  </script>
+  
+ </body>
 </html>
