--- a/jobs/index.html
+++ b/jobs/index.html
@@ -1,9 +1,57 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <meta http-equiv="refresh" content="0; url=https://astralship.org/jobs">
- </head>
- <body>
+<pre>Planet Earth is in danger. Calling quantum shift agents, rainbow warriors and all spiritual beings to the most important mission of our lifetimes. 
 
- </body>
-</html>
+Message is clear and beyond reasonable doubt: we need to act now ("now" as in "many years ago")
+
+Training is provided. Bring your best intentions and willingness to change and learn new abilities. We will 
+Build the best you
+forge your spirit 
+embed leadership skills
+make you bulletproof
+(time travel not included as of now)
+
+Background reading:
+* Cowspiracy
+* Earthlings
+* Racing Extinction 
+* #ClimateGames
+Spirit Science
+http://www.collective-evolution.com/
+
+We are all connected and if you are concerned about Syria situation check Wikipedia for "environmental refugee" then...
+
+Business and entrepreneurship are the fastest vehicle of change 
+
+We are challenging existing economic model based on debt and exploitation. 
+
+and we are transforming humanity by providing IT services to ethical and sustainable businesses fuelling local economies. 
+
+We treat everyone with love and respect, offering coaching when needed.
+
+Inspiring leaders:
+Mandela
+Gandi 
+Jobs
+Musk
+Tesla
+Fuller
+
+Tolle 
+Hancock
+Pinchbeck
+McKenna 
+Hoffman
+Huxley
+
+
+There will likely be no one out there coming here to save us from ourselves. It's our call, so let's keep on being excellent to each other. 
+
+Future generations are relying on us, let the new era of mankind begin.
+
+Will love, respect and compliments
+
+
+
+[[[ END OF THE CORE TRANSMISSION ]]]
+
+Keywords for search engine optimisation:
+</pre>
