Better preview as saring to Twitter

--- a/360/cop24/index.html
+++ b/360/cop24/index.html
@@ -19,18 +19,18 @@
     <script src="loader/iosOverlay.js"></script>
     <script src="loader/spin.min.js"></script>
 
-    <meta property="og:title" content="#astralship #35c3"/>
-    <meta property="og:image" content="https://genesis.re/360/35c3/preview.jpg"/>
+    <meta property="og:title" content="COP24 - United Nations Climate Chance Conference"/>
+    <meta property="og:image" content="https://genesis.re/360/cop24/preview.jpg"/>
     <meta property="og:site_name" content=""/>
     <meta property="og:description" content=""/>
 
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@theastralshippho">
+    <meta name="twitter:site" content="@michalstefanow">
     <meta name="twitter:creator" content="@marsxrobertson">
-    <meta name="twitter:title" content="#astralship #35c3">
+    <meta name="twitter:title" content="COP24 - United Nations Climate Chance Conference">
     <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="https://genesis.re/360/35c3/preview.jpg">
+    <meta name="twitter:image" content="https://genesis.re/360/cop24/preview.jpg">
 
   </head>
   <body>
