More info on the website

--- a/index.html
+++ b/index.html
@@ -86,15 +86,16 @@
     <meta name="twitter:image" content="https://genesis.re/flower.jpg">
 
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-103804182-1"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- FUCK THAT SHIT, NO TRACKING -->
+<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-103804182-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'UA-103804182-1');
-    </script>
+    </script> -->
 
 
   </head>
@@ -125,7 +126,36 @@
 
       <h3>architecting the new world</h3>
       <h3>operating system for the planets</h3>
-      <h3>read more on the <a href="https://genesis.re/wiki">wiki</a>, specifically <a href="https://genesis.re/wiki#Plan_B">Plan B</a></h3>
+
+      <br>
+      <br>
+
+      <p>Supporting <a href="https://rebellion.earth/">Extinction Rebellion</a></p>
+
+      <p>First collaborative project <a href="https://TELLTHETRUTH.media">TELLTHETRUTH.media</a></p>
+
+      <p>We are not into protesting.</p>
+
+      <p>We are into system change.</p>
+
+    
+      <p>The <a href="https://genesis.re/360/cop24/">genesis.re/360/cop24/</a> was a tipping point:</p>
+
+      <iframe src="https://genesis.re/360/cop24/"></iframe>
+
+      <p>These so-called "negotiators" have no idea about the reality. It "game over", here at genesis we started building affordbable bunkers (<a href="https://genesis.re/wiki#Plan_B">Plan B</a>) technology.</p>
+
+      <p>It's not "game over" yet, <a href="https://rebellion.earth/">Extinction Rebellion</a> offers hope.</p>
+
+      <p>Remember: protest is just a tool.</p>
+
+      <p>There is a much bigger game in the making!</p>
+
+      <p>Understand the big picture and know the truth...</p>
+
+      <p>That's why <a href="https://TELLTHETRUTH.media">TELLTHETRUTH.media</a> campaign</p>
+
+      <p><i>(I know what I know, I've seen what I've seen)</i></p>
 
 
 <!--       <br style="height: 3px">
@@ -192,6 +222,7 @@
         <br> -->
 
         <img src="www/images/michal-stefanow.jpg" height="90" style="float:left; margin-right: 15px">
+
 
         Michal Stefanow<br>
         <a href="https://twitter.com/michalstefanow">@michalstefanow</a><br>
