--- a/index.html
+++ b/index.html
@@ -224,9 +224,10 @@
         <img src="www/images/michal-stefanow.jpg" height="90" style="float:left; margin-right: 15px">
 
 
-        Michal Stefanow<br>
+        <strong>Michal Stefanow</strong><br>
+        Chief Architect<br>
         <a href="https://twitter.com/michalstefanow">@michalstefanow</a><br>
-        <!-- <a href="mailto:michalstefanow@gmail.com">michalstefanow@gmail.com</a><br> -->
+        <a href="mailto:michalstefanow@gmail.com">michalstefanow@gmail.com</a><br>
         <a href="https://michalstefanow.com">michalstefanow.com</a><br>
         <div class="clearfix"></div>        
 
@@ -234,9 +235,10 @@
 
         <img src="www/images/blueface.jpg" height="90" style="float:left; margin-right: 15px">
 
-        Mars Robertson<br>
+        <strong>Mars Robertson</strong><br>
+        Chief Integration Officer<br>
         <a href="https://twitter.com/marsXrobertson">@marsXrobertson</a><br>
-        <!-- <a href="mailto:marsXrobertson@gmail.com">marsXrobertson@gmail.com</a><br> -->
+        <a href="mailto:marsXrobertson@gmail.com">marsXrobertson@gmail.com</a><br>
         <a href="https://marsrobertson.com">marsrobertson.com</a><br>
         <div class="clearfix"></div>
 
