--- a/comms/index.html
+++ b/comms/index.html
@@ -2,6 +2,21 @@
 <html>
  <head>
   <meta http-equiv="refresh" content="0; url=https://docs.google.com/document/d/1d43eWED1Oty5gnIoHFXKOyQmOEY1bQiqE_XJnJf-8EQ/edit?usp=sharing">
+
+
+  	<title>digital infra handbook -  activist comms OPSEC</title>
+
+    <meta property="og:title" content="digital infra handbook -  activist comms OPSEC"/>
+    <meta property="og:image" content="http://genesis.re/comms/preview.jpg"/>
+    <meta property="og:site_name" content="Global Climate Strike and Extinction Rebellion"/>
+    <meta property="og:description" content=""/>
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@genesisdotre">
+    <meta name="twitter:creator" content="@marsXrobertson">
+    <meta name="twitter:title" content="digital infra handbook -  activist comms OPSEC">
+    <meta name="twitter:description" content="Global Climate Strike and Extinction Rebellion">
+    <meta name="twitter:image" content="http://genesis.re/comms/preview.jpg">
  </head>
  <body>
 
