--- a/book/index.html
+++ b/book/index.html
@@ -79,8 +79,18 @@
 
       <h1>THE BOOK</h1>
 
-      <p>Currently finishing details in Google Doc: <a href="https://docs.google.com/document/d/1Y0zHshlHqXzXhvMpfIOyLLgyVgyVjedtqCMN0JCbn1k/edit?usp=sharing">docs.google.com/document/d/1Y0zHshlHqXzXhvMpfIOyLLgyVgyVjedtqCMN0JCbn1k/edit?usp=sharing</a>
+      <p>Currently finishing details in Google Doc: <a href="https://docs.google.com/document/d/1Y0zHshlHqXzXhvMpfIOyLLgyVgyVjedtqCMN0JCbn1k/edit?usp=sharing">docs.google.com/document/d/1Y0zHshlHqXzXhvMpfIOyLLgyVgyVjedtqCMN0JCbn1k</a>
 
+      <h3>It's pretty much ready...</h3>
+
+      <p>...now some finishing touches, such as the title, cover, formatting, footnotes.</p>
+
+      <p>Potential titles:<br>
+      &nbsp;&nbsp;• Unfuck the Planet - Systematic Change to Handle Climate Emergency<br>
+      &nbsp;&nbsp;• Architecting a New World - Operating System for the Planet(s)<br>
+      </p> 
+
+    
       <!-- Begin Mailchimp Signup Form -->
       <link href="https://cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
       <style type="text/css">
@@ -102,6 +112,10 @@
 
       <!--End mc_embed_signup-->
 
+      <h3>Cover options</h3>
+
+      <img src="blueprint.jpg">
+      <img src="blockchain.jpg">
     
 
     </div>
