--- a/book/index.html
+++ b/book/index.html
@@ -53,6 +53,8 @@
         padding: 15px; 
         font-weight: bold;
         border: 2px solid white;
+        text-decoration: underline;
+        display: inline-block;
       }
       .thelink:hover {
         border: 2px solid yellow;
@@ -99,7 +101,7 @@
 
       <br>
 
-      <p>Currently published as <a class="thelink" href="https://docs.google.com/document/d/1Y0zHshlHqXzXhvMpfIOyLLgyVgyVjedtqCMN0JCbn1k/edit?usp=sharing">Google Doc</a>
+      <p>Currently published as <a class="thelink" href="https://docs.google.com/document/d/1Y0zHshlHqXzXhvMpfIOyLLgyVgyVjedtqCMN0JCbn1k/edit?usp=sharing">Google&nbsp;Doc</a>
 
       <br>
       <br>
@@ -108,10 +110,10 @@
       
 
       <h2>UN Climate Action Summit 2019</h2>
-      <p>That was my "deadline", I really wanted to share the knowledge with key decision makers at <a href="https://twitter.com/hashtag/climateweeknyc">#ClimateWeekNYC</a><br>
+      <p>That was my "deadline", I really wanted to share the knowledge with the decision makers at <a href="https://twitter.com/hashtag/climateweeknyc">#ClimateWeekNYC</a><br>
 
-      &nbsp;&nbsp;• <a href="https://www.climateweeknyc.org/climate-week-nyc-2019">climateweeknyc.org/climate-week-nyc-2019</a><br>
-      &nbsp;&nbsp;• <a href="https://www.un.org/en/climatechange/un-climate-summit-2019.shtml">un.org/en/climatechange/un-climate-summit-2019.shtml</a>
+<!--       &nbsp;&nbsp;• <a href="https://www.climateweeknyc.org/climate-week-nyc-2019">climateweeknyc.org/climate-week-nyc-2019</a><br>
+      &nbsp;&nbsp;• <a href="https://www.un.org/en/climatechange/un-climate-summit-2019.shtml">un.org/en/climatechange/un-climate-summit-2019.shtml</a> -->
       </p>
 
 
