--- a/book/index.html
+++ b/book/index.html
@@ -105,9 +105,9 @@
 
 
       <p><a class="thelink" href="https://docs.google.com/document/d/1Y0zHshlHqXzXhvMpfIOyLLgyVgyVjedtqCMN0JCbn1k/edit?usp=sharing">Google&nbsp;Doc</a>
-        <a class="thelink" href="Unfuck the Planet - Systematic Change to Handle Climate Emergency.pdf">Non Google PDF</a></p>
+        <a class="thelink" href="Unfuck the Planet - Systematic Change to Handle Climate Emergency.pdf">non Google PDF</a></p>
 
-        <p>Google Doc is useful when you want to coment, Non Google PDF is useful in other circumstances.</p>
+        <p>Google Doc is useful when you want to comment on a specific paragraph, non Google PDF can be useful in other circumstances.</p>
 
     
 <!--       <h2>UN Climate Action Summit 2019</h2>
