--- a/book/index.html
+++ b/book/index.html
@@ -97,13 +97,16 @@
 
       <h1>System Change - Actionable Policies to Handle Climate Emergency</h1>
 
-      <p>It has been formatted to Kindle format, published, waiting for the review.</p>
+      <p>Apologies for the price tag, apparently it's <a href="https://www.writtenwordmedia.com/amazon-kdp-publishing-make-book-free/">not that easy to publish on Kindle for free.</a></p>
+
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=GB&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=hacktheplan01-21&language=en_GB&marketplace=amazon&region=GB&placement=B07YK7GGTL&asins=B07YK7GGTL&linkId=eddc403138f92a2add8f80654c4e84df&show_border=true&link_opens_in_new_window=true"></iframe>
 
       <!-- <img src="kindle.png"> -->
 
       <!-- <p>Architecting a New Earth - Operating System for the Planet(s)</p> -->
 
       <p>
+        You can read online or download in any format you prefer:
         <a class="thelink" href="https://docs.google.com/document/d/1Y0zHshlHqXzXhvMpfIOyLLgyVgyVjedtqCMN0JCbn1k/edit?usp=sharing">Google&nbsp;Doc</a>
       </p>
 
