--- a/book/index.html
+++ b/book/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Genesis Book - Architecting a New World</title>
+    <title>System Change - Actionable Policies to Handle Climate Emergency</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <style>
@@ -79,16 +79,16 @@
       }
     </style>
 
-    <meta property="og:title" content="Genesis Book - Architecting a New World"/>
-    <meta property="og:image" content="https://genesis.re/flower.jpg"/>
-    <meta property="og:site_name" content="Architecting a New World"/>
-    <meta property="og:description" content="Extinction Rebellion"/>
+    <meta property="og:title" content="System Change - Actionable Policies to Handle Climate Emergency"/>
+    <meta property="og:image" content="https://genesis.re/book/preview.jpg"/>
+    <meta property="og:site_name" content="Architecting a New World - Operating System for the Planet(s)"/>
+    <meta property="og:description" content="Supporting Extinction Rebellion"/>
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@genesisdotre">
     <meta name="twitter:creator" content="@marsXrobertson">
-    <meta name="twitter:title" content="Genesis Book - Architecting a New World">
-    <meta name="twitter:description" content="Architecting a New World • Extinction Rebellion">
+    <meta name="twitter:title" content="System Change - Actionable Policies to Handle Climate Emergency">
+    <meta name="twitter:description" content="Supporting Extinction Rebellion">
 
   </head>
   <body>
@@ -97,17 +97,19 @@
 
       <h1>System Change - Actionable Policies to Handle Climate Emergency</h1>
 
-      <p>Apologies for the price tag, apparently it's <a href="https://www.writtenwordmedia.com/amazon-kdp-publishing-make-book-free/">not that easy to publish on Kindle for free.</a></p>
-
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=GB&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=hacktheplan01-21&language=en_GB&marketplace=amazon&region=GB&placement=B07YK7GGTL&asins=B07YK7GGTL&linkId=eddc403138f92a2add8f80654c4e84df&show_border=true&link_opens_in_new_window=true"></iframe>
-
       <!-- <img src="kindle.png"> -->
 
-      <!-- <p>Architecting a New Earth - Operating System for the Planet(s)</p> -->
+      <p>Architecting a New World - Operating System for the Planet(s)</p>
 
       <p>
-        You can read online or download in any format you prefer:
+        <a class="thelink" href="https://archive.org/download/system-change-actionable-policies-to-handle-climate-emergency/System%20Change%20-%20Actionable%20Policies%20to%20Handle%20Climate%20Emergency.pdf">PDF on archive.org</a>
+
+
+        <a class="thelink" href="https://gateway.ipfs.io/ipfs/QmS5iAtutKUj5nrvXU2LjeDjQ3tCtGxSxzoYGnJAJAq6S3">PDF on IPFS</a>
+
         <a class="thelink" href="https://docs.google.com/document/d/1Y0zHshlHqXzXhvMpfIOyLLgyVgyVjedtqCMN0JCbn1k/edit?usp=sharing">Google&nbsp;Doc</a>
+
+        <a class="thelink" href="https://amzn.to/2mI3iNJ">Amazon Kindle</a>
       </p>
 
 
@@ -121,7 +123,10 @@
       &nbsp;&nbsp;• <a href="https://www.un.org/en/climatechange/un-climate-summit-2019.shtml">un.org/en/climatechange/un-climate-summit-2019.shtml</a> -->
 
 
-      <p>Contact me anytime: <a href="mailto:email@genesis.re">email@genesis.re</a></p>
+      <p>
+        Contact me anytime: <a href="mailto:email@genesis.re">email@genesis.re</a><br>
+        Follow me on Twitter: <a href="https://twitter.com/marsxRobertson">marsXrobertson</a>
+      </p>
      
     
       <!-- Begin Mailchimp Signup Form -->
@@ -134,7 +139,7 @@
       <div id="mc_embed_signup">
       <form action="https://wakacjones.us4.list-manage.com/subscribe/post?u=f7d4defd21860779ebd2e03af&amp;id=214062edca" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
-        <label for="mce-EMAIL" style="color:black">Be updated when it is published:</label>
+        <label for="mce-EMAIL" style="color:black">Stay in touch:</label>
         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_f7d4defd21860779ebd2e03af_214062edca" tabindex="-1" value=""></div>
