--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
       <h3>architecting the new world</h3>
       <h3>operating system for the planets</h3>
 
+      <h3><a href="book">The book is ready!</a></h3>
+
+      <br>
+
+      <img src="book/System Change - Actionable Policies to Handle Climate Emergency.jpg" style="max-width: 100%">
+
+
       <br>
       <br>
 
