--- a/book/index.html
+++ b/book/index.html
@@ -125,14 +125,14 @@
 </style>
 
 <p>
-  <div class="title">Artitecting Earth 2.0</div>
+  <div class="title">Architecting Earth 2.0</div>
   Many things will have to change, these are the most impactful and critical points, attainable right now:
   <ol>
     <li>Land use. Food system. Less crops to feed livestock. Rebuilding soil and natural ecosystems.</li>
     <li>Emissions Trading System. No more free allowances. Unified global standard supported by enforceable sanctions.</li>
     <li>Energy storage and transmission. You can install solar panels but it will not reduce the dependency on fossil fuels - we are using peaker plants to supply electricity during peak demand.</li>
   </ol>
-  The book covers many other things and many interdependencies in more details.
+  The book covers many other things and many interdependencies in more detail.
 </p>
 
 
