--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       h3 {
         margin-bottom: 0;
         font-weight: bold;
-        font-size: 1.4em;
+        font-size: 1.3em;
       }
       h3 + p {
         margin-top: 0;
@@ -125,32 +125,34 @@
 
 
       <h3>architecting the new world</h3>
-      <h3>operating system for the planets</h3>
+      <h3>operating system for the planet(s)</h3>
 
-      <h3><a href="book">The book is ready!</a></h3>
+      <!-- <h3><a href="book">The book is ready!</a></h3> -->
 
-      <br>
-
-      <img src="book/System Change - Actionable Policies to Handle Climate Emergency.jpg" style="max-width: 100%">
-
+      <h3>current projects: <a href="https://EstoniaDAO.org">EstoniaDAO.org</a> and <a href="https://IslandDAO.org">IslandDAO.org</a></h3>
 
       <br>
+
+      <!-- <img src="book/System Change - Actionable Policies to Handle Climate Emergency.jpg" style="max-width: 100%"> -->
+
+
+      <br>
       <br>
 
-      <p>Supporting <a href="https://rebellion.earth/">Extinction Rebellion</a></p>
+      <!-- <p>Supporting <a href="https://rebellion.earth/">Extinction Rebellion</a></p> -->
 
-      <p>First collaborative project <a href="https://TELLTHETRUTH.media">TELLTHETRUTH.media</a></p>
+      <!-- <p>First collaborative project <a href="https://TELLTHETRUTH.media">TELLTHETRUTH.media</a></p> -->
 
-      <p>We are not into protesting.</p>
+      <!-- <p>We are not into protesting.</p> -->
 
-      <p>We are into system change.</p>
+      <!-- <p>We are into system change.</p> -->
 
     
-      <p>The <a href="https://genesis.re/360/cop24/">genesis.re/360/cop24/</a> was a tipping point:</p>
+<!--       <p>The <a href="https://genesis.re/360/cop24/">genesis.re/360/cop24/</a> was a tipping point:</p>
 
-      <iframe src="https://genesis.re/360/cop24/"></iframe>
+      <iframe src="https://genesis.re/360/cop24/"></iframe> -->
 
-      <p>These so-called "negotiators" have no idea about the reality. It "game over", here at genesis we started building affordbable bunkers (<a href="https://genesis.re/wiki#Plan_B">Plan B</a>) technology.</p>
+<!--       <p>These so-called "negotiators" have no idea about the reality. It "game over", here at genesis we started building affordbable bunkers (<a href="https://genesis.re/wiki#Plan_B">Plan B</a>) technology.</p>
 
       <p>It's not "game over" yet, <a href="https://rebellion.earth/">Extinction Rebellion</a> offers hope.</p>
 
@@ -162,7 +164,7 @@
 
       <p>That's why <a href="https://TELLTHETRUTH.media">TELLTHETRUTH.media</a> campaign</p>
 
-      <p><i>(I know what I know, I've seen what I've seen)</i></p>
+      <p><i>(I know what I know, I've seen what I've seen)</i></p> -->
 
 
 <!--       <br style="height: 3px">
@@ -193,8 +195,6 @@
 
       <a href="www/images/qrcode.png" style="border-bottom: 0; position: absolute; margin-left: 10px; margin-top: -40px;"><img src="www/images/qrcode.png" height="130"></a>
  -->
-      <br>
-      <br>
 
       <!--
       <h3>Project 3: life insurance policy</h3>
@@ -228,7 +228,7 @@
 
         <br> -->
 
-        <img src="www/images/michal-stefanow.jpg" height="90" style="float:left; margin-right: 15px">
+<!--         <img src="www/images/michal-stefanow.jpg" height="90" style="float:left; margin-right: 15px">
 
 
         <strong>Michal Stefanow</strong><br>
@@ -238,9 +238,9 @@
         <a href="https://michalstefanow.com">michalstefanow.com</a><br>
         <div class="clearfix"></div>        
 
-        <br>
+        <br> -->
 
-        <img src="www/images/blueface.jpg" height="90" style="float:left; margin-right: 15px">
+        <img src="www/images/mars-robertson.jpg" height="90" style="float:left; margin-right: 15px">
 
         <strong>Mars Robertson</strong><br>
         Chief Integration Officer<br>
