--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       }
 
       .wrapper {
-        max-width: 600px;
+        width: 600px;
+        max-width: 80vw;
         margin: 80px auto; /* TODO: align middle */
         padding: 20px;
         background: rgba(0,0,0,0.85);
@@ -129,15 +130,26 @@
 
       <!-- <h3><a href="book">The book is ready!</a></h3> -->
 
-      <h3>current projects: <a href="https://EstoniaDAO.org">EstoniaDAO.org</a> and <a href="https://IslandDAO.org">IslandDAO.org</a></h3>
+      <h3 style="margin-bottom: 10px">current projects</h3>
+
+      <style> .emoji {
+        margin-top: 20px;
+        font-size: 2em;
+        top: 8px;
+        position: relative;
+      }
+    </style>
+
+<span class="emoji">🇪🇪</span> <a href="https://EstoniaDAO.org">EstoniaDAO.org</a><br><br>
+<span class="emoji">🏝</span> <a href="https://IslandDAO.org">IslandDAO.org</a><br><br>
+<span class="emoji">💌</span> <a href="https://mailhustle.com">mailhustle.com</a><br><br>
+<span class="emoji">📚</span> <a href="https://genesis.re/book">genesis.re/book</a><br><br>
+
+<p>Hacker mindset can go a long way. Amazon Kindle does not allow FREE, need charge $0.99? Can sell on Google for FREE, then do price match.</p>
 
       <br>
 
       <!-- <img src="book/System Change - Actionable Policies to Handle Climate Emergency.jpg" style="max-width: 100%"> -->
-
-
-      <br>
-      <br>
 
       <!-- <p>Supporting <a href="https://rebellion.earth/">Extinction Rebellion</a></p> -->
 
